--- a/pages/3443.html
+++ b/pages/3443.html
@@ -309,52 +309,56 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <ul>
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Related Lab entries</title></head>
+<body>
+<ul>
 <li>
-<p><a class='existingWikiWord' href='/richardwilliamson/show/HomePage'>nlab sub-wiki</a></p>
+<p><a class="existingWikiWord" href="/richardwilliamson/show/HomePage">nlab sub-wiki</a></p>
 </li>
 
 <li>
-<p><a href='http://rwilliamson-mathematics.info/'>website</a></p>
+<p><a href="http://rwilliamson-mathematics.info/">website</a></p>
 </li>
 
 <li>
-<p><a href='http://rwilliamson-mathematics.info/cylindrical_model_structures.pdf'>thesis</a></p>
+<p><a href="http://rwilliamson-mathematics.info/cylindrical_model_structures/cylindrical_model_structures.html">thesis</a></p>
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_977ce9148c94dede1af8aeb76e65f1c215f1c2c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id="related_lab_entries">Related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cylinder+functor'>cylinder functor</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/cylinder+functor">cylinder functor</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/homotopy+group+%28of+an+%E2%88%9E-stack%29'>homotopy group (of an ∞-stack)</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/homotopy+group+%28of+an+%E2%88%9E-stack%29">homotopy group (of an ∞-stack)</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/motivic+cohomology'>motivic cohomology</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/motivic+cohomology">motivic cohomology</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/A1-homotopy+theory'>A1-homotopy theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/A1-homotopy+theory">A1-homotopy theory</a></p>
 </li>
 </ul>
-<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 27, 2018 at 07:13:39.
+  Last revised on October 11, 2018 at 05:09:02.
   See the <a href="https://ncatlab.org/nlab/history/Richard Williamson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Richard+Williamson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Williamson/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Richard+Williamson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Williamson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Richard+Williamson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Williamson/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Richard+Williamson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Williamson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Richard Williamson/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
