--- a/pages/10356.html
+++ b/pages/10356.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1135,6 +1135,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Discussion in terms of <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a>:</p>
+
+<ul>
+<li id="GarciaCompean98">Hugo Garcia-Compean, <em>D-branes in Orbifold Singularities and Equivariant K-Theory</em>, Nucl.Phys. B557 (1999) 480-504 (<a href="https://arxiv.org/abs/hep-th/9812226">arXiv:hep-th/9812226</a>)</li>
+</ul>
+
 <p>Survey with an eye towards <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> is in</p>
 
 <ul>
@@ -1226,14 +1232,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 03:26:45.
+  Last revised on October 11, 2018 at 07:16:11.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
