--- a/pages/1593.html
+++ b/pages/1593.html
@@ -860,7 +860,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, <a class="existingWikiWord" href="/nlab/show/Bogdan+Stefanski">Bogdan Stefanski</a>, <em>Orientifolds and K-theory</em> (<a href="https://arxiv.org/abs/hep-th/0206158">arXiv:hep-th/0206158</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, <a class="existingWikiWord" href="/nlab/show/Bogdan+Stefanski">Bogdan Stefanski</a>, <em>Orientifolds and K-theory</em>, Braun, Volker. “Orientifolds and K-theory.” Progress in String, Field and Particle Theory. Springer, Dordrecht, 2003. 369-372 (<a href="https://arxiv.org/abs/hep-th/0206158">arXiv:hep-th/0206158</a>)</p>
 </li>
 
 <li>
@@ -949,14 +949,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  7, 2018 at 11:46:38.
+  Last revised on October 11, 2018 at 07:06:39.
   See the <a href="https://ncatlab.org/nlab/history/orientifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orientifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
