--- a/pages/17004.html
+++ b/pages/17004.html
@@ -1037,6 +1037,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, Rekha Santhanam, <em>Power operations and absolute geometry</em> (<a href="http://www.lemiller.net/media/slidesconf/AbsolutePower.pdf">pdf</a>)</p>
 </li>
 
+<li id="MoravaSomeBackground">
+<p><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, <em>Some background on Manin’s theorem <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>∼</mo><mi>𝕊</mi></mrow><annotation encoding="application/x-tex">K(\mathbb{F}_1) \sim \mathbb{S}</annotation></semantics></math></em> (<a href="http://www.alainconnes.org/docs/Morava.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/MoravaSomeBackground.pdf" title="">MoravaSomeBackground.pdf</a>)</p>
+</li>
+
 <li id="Berman18">
 <p>John D. Berman, p. 92 of <em>Categorified algebra and equivariant homotopy theory</em>, PhD thesis 2018 (<a href="http://www.people.virginia.edu/~jdb8pc/Thesis.pdf">pdf</a>)</p>
 </li>
@@ -1059,14 +1063,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 13:25:44.
+  Last revised on October 11, 2018 at 08:44:05.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
