--- a/pages/8003.html
+++ b/pages/8003.html
@@ -747,8 +747,10 @@ margin-left: 0em;
 <p>Write <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup></mrow><annotation encoding="application/x-tex">FinSet^{*/}</annotation></semantics></math> for the <a class="existingWikiWord" href="/nlab/show/category">category</a> of <a class="existingWikiWord" href="/nlab/show/pointed+objects">pointed</a> <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a>.</p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a>, there is naturally a <a class="existingWikiWord" href="/nlab/show/functor">functor</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>C</mi><mo>¯</mo></mover> <mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow></msub><mo>:</mo><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo>→</mo><mi>Cat</mi></mrow><annotation encoding="application/x-tex">
-  \widebar {C}_{(-)} : FinSet^{*/} \to Cat
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>C</mi><mo>¯</mo></mover> <mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo>→</mo><mi>Cat</mi></mrow><annotation encoding="application/x-tex">
+  \widebar {C}_{(-)}
+  \;\colon\; 
+  FinSet^{*/} \to Cat
 
 </annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>↦</mo><msub><mover><mi>C</mi><mo>¯</mo></mover> <mi>A</mi></msub></mrow><annotation encoding="application/x-tex">
   A \mapsto \widebar C_A
@@ -965,14 +967,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 10, 2018 at 07:47:26.
+  Last revised on October 11, 2018 at 09:14:35.
   See the <a href="https://ncatlab.org/nlab/history/K-theory of a permutative category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K-theory of a permutative category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
