--- a/pages/17004.html
+++ b/pages/17004.html
@@ -979,7 +979,7 @@ margin-left: 0em;
 <p>The identification of stable cohomotopy with the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+permutative+category">K-theory of the permutative category</a> of <a class="existingWikiWord" href="/nlab/show/finite+set">finite set</a> is due to</p>
 
 <ul>
-<li id="Segal74"><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Catgeories and cohomology theories</em>, Topology vol 13 (1974) (<a href="http://ncatlab.org/nlab/files/SegalCategoriesAndCohomologyTheories.pdf">pdf</a>)</li>
+<li id="Segal74"><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Categories and cohomology theories</em>, Topology vol 13, pp. 293-312, 1974 (<a href="http://ncatlab.org/nlab/files/SegalCategoriesAndCohomologyTheories.pdf">pdf</a>)</li>
 </ul>
 
 <p>see also</p>
@@ -1073,14 +1073,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 09:31:28.
+  Last revised on October 11, 2018 at 11:06:50.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
