--- a/pages/11736.html
+++ b/pages/11736.html
@@ -760,7 +760,7 @@ margin-left: 0em;
 <li id="DouglasMoore96"><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <em>D-branes, Quivers, and ALE Instantons</em> (<a href="http://arxiv.org/abs/hep-th/9603167">arXiv:hep-th/9603167</a>)</li>
 </ul>
 
-<p>The understanding of the <span class="newWikiWord">McKay quiver<a href="/nlab/new/McKay+quiver">?</a></span> as the <a class="existingWikiWord" href="/nlab/show/fixed+point+space">fixed point space</a> in the <a class="existingWikiWord" href="/nlab/show/fermion">fermion</a>-representation under <span class="newWikiWord">R-symmatry<a href="/nlab/new/R-symmatry">?</a></span> is due to</p>
+<p>The understanding of the <span class="newWikiWord">McKay quiver<a href="/nlab/new/McKay+quiver">?</a></span> as the <a class="existingWikiWord" href="/nlab/show/fixed+point+space">fixed point space</a> in the <a class="existingWikiWord" href="/nlab/show/fermion">fermion</a>-representation under <a class="existingWikiWord" href="/nlab/show/R-symmetry">R-symmetry</a> is due to</p>
 
 <ul>
 <li id="LawrenceNekrasovVafa98">A. Lawrence, <a class="existingWikiWord" href="/nlab/show/Nikita+Nekrasov">Nikita Nekrasov</a>, <a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <em>On Conformal Theories in Four Dimensions</em>, Nucl.Phys. B533 (1998) 199-209 (<a href="https://arxiv.org/abs/hep-th/9803015">arXiv:hep-th/9803015</a>)</li>
@@ -823,14 +823,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 12, 2018 at 14:28:32.
+  Last revised on October 14, 2018 at 02:30:12.
   See the <a href="https://ncatlab.org/nlab/history/quiver gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quiver+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver+gauge+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/quiver+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quiver+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver+gauge+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/quiver+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quiver gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
