--- a/pages/19842.html
+++ b/pages/19842.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Daniil Frumin in nLab
+      Tim Berberich in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Daniil Frumin
+      Tim Berberich
   </h1>
 
 
@@ -294,8 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
-    <a href="https://ncatlab.org/nlab/author/Daniil%20Frumin" title="Overview of nLab pages which Daniil Frumin has edited" style="color: black">Pages contributed to</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9139/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/Tim%20Berberich" title="Overview of nLab pages which Tim Berberich has edited" style="color: black">Pages contributed to</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -310,33 +310,43 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
 <ul>
-<li>Contact email: dfrumin at cs dot ru dot nl</li>
+<li><a href='#contact'>Contact</a></li>
+<li><a href='#master_thesis'>Master Thesis</a></li>
 </ul>
+</div>
+
+<h2 id="contact">Contact</h2>
+
+<p>Mail at <a href="mailto:berxue@outlook.com">&#098;&#101;&#114;&#120;&#117;&#101;&#064;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#046;&#099;&#111;&#109;</a> or <a href="mailto:Tim.Benedict.Berberich@studium.uni-hamburg.de">&#084;&#105;&#109;&#046;&#066;&#101;&#110;&#101;&#100;&#105;&#099;&#116;&#046;&#066;&#101;&#114;&#098;&#101;&#114;&#105;&#099;&#104;&#064;&#115;&#116;&#117;&#100;&#105;&#117;&#109;&#046;&#117;&#110;&#105;&#045;&#104;&#097;&#109;&#098;&#117;&#114;&#103;&#046;&#100;&#101;</a></p>
+
+<h2 id="master_thesis">Master Thesis</h2>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 15, 2018 at 06:17:00.
-  See the <a href="https://ncatlab.org/nlab/history/Daniil Frumin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 15, 2018 at 06:31:07.
+  See the <a href="https://ncatlab.org/nlab/history/Tim Berberich" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Daniil+Frumin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Daniil+Frumin/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Daniil+Frumin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Daniil+Frumin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Daniil Frumin/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Tim+Berberich" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Tim Berberich/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Daniil+Frumin" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Tim+Berberich" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Daniil+Frumin" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Tim+Berberich" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Daniil+Frumin" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Tim+Berberich" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
