--- a/pages/19843.html
+++ b/pages/19843.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Daniil Frumin in nLab
+      Tim Berberich/master_thesis in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Daniil Frumin
+      Tim Berberich/master_thesis
   </h1>
 
 
@@ -294,8 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
-    <a href="https://ncatlab.org/nlab/author/Daniil%20Frumin" title="Overview of nLab pages which Daniil Frumin has edited" style="color: black">Pages contributed to</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9140/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -310,10 +309,18 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>content</title></head>
 <body>
+<h1 id="content">content</h1>
+
+<p><em>table of contents</em></p>
+
+<h2 id="status">Status</h2>
+
+<h2 id="list_open_questions">List open questions</h2>
+
 <ul>
-<li>Contact email: dfrumin at cs dot ru dot nl</li>
+<li>see that in BRST</li>
 </ul>
 </body></html>
 
@@ -321,22 +328,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 15, 2018 at 06:17:00.
-  See the <a href="https://ncatlab.org/nlab/history/Daniil Frumin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 15, 2018 at 06:39:08.
+  See the <a href="https://ncatlab.org/nlab/history/Tim Berberich/master_thesis" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Daniil+Frumin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Daniil+Frumin/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Daniil+Frumin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Daniil+Frumin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Daniil Frumin/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Tim+Berberich%2Fmaster_thesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Tim Berberich/master_thesis/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Daniil+Frumin" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Tim+Berberich%2Fmaster_thesis" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Daniil+Frumin" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Tim+Berberich%2Fmaster_thesis" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Daniil+Frumin" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Tim+Berberich%2Fmaster_thesis" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
