--- a/pages/19841.html
+++ b/pages/19841.html
@@ -335,7 +335,7 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>The cryptographic hash with the required properties is hard to create, where ‘hard’ means requiring significant computational resources and takes time (e.g. something like <a class="existingWikiWord" href="/nlab/show/prime">prime</a> factorisation). Use of these computational resources to create the hash is referred to as ‘proof of work’.</p>
+<p>The cryptographic hash with the required properties is hard to create, where ‘hard’ means requiring significant computational resources and taking time (e.g. something like <a class="existingWikiWord" href="/nlab/show/prime">prime</a> factorisation). Use of these computational resources to create the hash is referred to as ‘proof of work’.</p>
 </li>
 
 <li>
@@ -372,14 +372,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 15, 2018 at 05:43:38.
+  Last revised on October 15, 2018 at 08:49:39.
   See the <a href="https://ncatlab.org/nlab/history/blockchain" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/blockchain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/blockchain/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/blockchain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/blockchain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/blockchain" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/blockchain/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/blockchain" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/blockchain" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/blockchain/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
