--- a/pages/3814.html
+++ b/pages/3814.html
@@ -1179,7 +1179,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class="newWikiWord">flavour anomaly<a href="/nlab/new/flavour+anomaly">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/flavour+anomaly">flavour anomaly</a></p>
 </li>
 
 <li>
@@ -1268,14 +1268,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 16, 2018 at 02:59:31.
+  Last revised on October 16, 2018 at 03:32:37.
   See the <a href="https://ncatlab.org/nlab/history/standard model of particle physics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/standard+model+of+particle+physics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/standard+model+of+particle+physics/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/standard+model+of+particle+physics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/standard+model+of+particle+physics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/standard model of particle physics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
