--- a/pages/143.html
+++ b/pages/143.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1471,7 +1471,7 @@ margin-left: 0em;
 <p>A concise and contemporary overview can be found in</p>
 
 <ul>
-<li id="CentazzoVitale04">C. Centazzo,<a class="existingWikiWord" href="/nlab/show/Enrico+Vitale">E. M. Vitale</a>, <em>Sheaf theory</em> , pp.311-358 in Pedicchio, Tholen (eds.), <em>Categorical Foundations</em> , Cambridge UP 2004. (<a href="https://perso.uclouvain.be/enrico.vitale/chapter7.pdf">draft</a>)</li>
+<li id="CentazzoVitale04">C. Centazzo, <a class="existingWikiWord" href="/nlab/show/Enrico+Vitale">E. M. Vitale</a>, <em>Sheaf theory</em> , pp.311-358 in Pedicchio, Tholen (eds.), <em>Categorical Foundations</em> , Cambridge UP 2004. (<a href="https://perso.uclouvain.be/enrico.vitale/chapter7.pdf">draft</a>)</li>
 </ul>
 
 <p>The book by Kashiwara and Schapira discusses sheaves with motivation from <a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a>, <a class="existingWikiWord" href="/nlab/show/abelian+sheaf+cohomology">abelian sheaf cohomology</a> and <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, leading over in the last chapter to the notion of <a class="existingWikiWord" href="/nlab/show/stack">stack</a>.</p>
@@ -1509,7 +1509,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 16, 2018 at 07:54:30.
+  Last revised on October 16, 2018 at 08:00:34.
   See the <a href="https://ncatlab.org/nlab/history/sheaf" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
