--- a/pages/3842.html
+++ b/pages/3842.html
@@ -794,7 +794,7 @@ margin-left: 0em;
 
 <p>The following <a class="existingWikiWord" href="/nlab/show/Giraud+theorem">Giraud like</a> theorem stems from <a class="existingWikiWord" href="/nlab/show/Marta+Bunge">Marta Bunge's</a> dissertation (1966)</p>
 
-<div class="num_prop" id="bunge_theorem">
+<div class="num_theorem" id="bunge_theorem">
 <h6 id="theorem">Theorem</h6>
 
 <p>A category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is equivalent to a presheaf topos if and only if it is cocomplete, <a class="existingWikiWord" href="/nlab/show/atomic+category">atomic</a>, and <a class="existingWikiWord" href="/nlab/show/regular+category">regular</a>.</p>
@@ -983,7 +983,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 16, 2018 at 07:59:07.
+  Last revised on October 16, 2018 at 08:07:31.
   See the <a href="https://ncatlab.org/nlab/history/category of presheaves" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
